@@ -48,7 +48,7 @@ my $build = Module::Build->new(
 		'Test::Portability::Files'	=> '0.05',
 		'Test::DistManifest'		=> '1.005',
 #		'Test::Module::Used'		=> '0.1.2',	# M::B::Compat 0.36 doesn't like this!
-		'Test::Module::Used'		=> '0.001002',
+		'Test::Module::Used'		=> '0.001009',
 		'Test::Synopsis'		=> '0.06',
 		'Test::CPAN::Meta'		=> '0.13',
 		'Test::NoBreakpoints'		=> '0.13',
